# pystaleds

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yml  tests.yml
src/: ast_parsing.rs  debug.rs  lexing.rs  lib.rs  main.rs  parsing.rs  rules_checking.rs
test_folder/: test.py  test_cp.py
